[package]
name = "yarn-lock"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]

[dependencies]
nom = "3.2.1"
#indent_tokenizer = "0.2.0"
indent_tokenizer = {git = "https://github.com/hoodie/indent_tokenizer"}
semver = "0.9.0"
url = { git = "https://github.com/hoodie/rust-url", features = ["serde"] }
